# epistemic_governor

./: .gitignore  BLI_CONSTITUTION.md  CONFORMANCE_boundary_gate_before_parsing.json  CONFORMANCE_info_gain_never_autobind.json  CONFORMANCE_mode_counterfactual_no_timeline.json  CONFORMANCE_polarity_span_local.json  CONFORMANCE_split_uses_own_metadata.json  DESIGN_RATIONALE.md  FAQ.md  GAP_ANALYSIS.md  README.md  ROADMAP.md  SPEC.json  SYMBOLIC_KERNELS.md  THREE_CUEING.md  __init__.py  __main__.py  accretion.py  autopilot_fsm.py  autopilot_integration.py  bench_hallucination_traps.py  bench_resonance.py  budget_sweep.py  calibrate.py  character.py  claim_diff.py  cli.py  commit_phase.py  creative.py  curiosity.py  demonstrator.py  diagnostic_events.jsonl  diagnostic_report.txt  diff_quantifier_strengthen_violation.json  diff_value_drift_detected.json  domain_modules.py  epistemic_module.py  evaluation.py  events.py  extractor.py  (+42 more)
adversarial/: test_authority_spoofing.py  test_forced_resolution.py  test_otel_emission.py  test_self_certification.py
config/: regime_thresholds.json
docs/: ARCHITECTURE.md  BLI_CONSTITUTION.md  BLI_SPEC_V1.md  BLI_V3_SPEC.md  CONSTRAINT_KERNELS.md  FAQ.md  INTEGRATION.md  INVARIANTS.md  NLAI.md  OPERATING_ENVELOPE.md  OTEL_CONVENTIONS.md  PAPER_SPEC.md  QUICKSTART.md  README.md  REFUSALS.md
docs/internal/: MIGRATION_V2.md  ROADMAP.md  SESSION_2026_01_02.md  TODO_ADVERSARIAL.md  TODO_CONSOLIDATED.md
instrumentation/: demo_agent.py  langchain_callback.py
jurisdictions/: README.md  audit.py  counterfactual.py  narrative.py
src/epistemic_governor/: __init__.py  __main__.py  api.py  autopilot_fsm.py  autopilot_integration.py  bench_hallucination_traps.py  bench_resonance.py  budget_sweep.py  calibrate.py  claim_diff.py  claim_extractor.py  claims.py  cli.py  commit_phase.py  competence.py  concurrency.py  config_loader.py  creative.py  curiosity.py  diagnostics.py  domain_modules.py  egov.py  envelope.py  epistemic_module.py  evaluation.py  extractor.py  failure_provenance.py  fitter.py  governor.py  governor_fsm.py  ground_truth.py  (+33 more)
src/epistemic_governor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  run_golden_tests.py  test_all.py  test_audit.py  test_authority_separation.py  test_boil.py  test_bridge_hardening.py  test_bypass_prevention.py  test_cf.py  test_claim_extraction.py  test_clock_invariants.py  test_edge_cases.py  test_fitter.py  test_integration.py  test_jurisdictions.py  test_nlai.py  test_profile.py  test_regime.py  test_runtime_authority.py  test_support_saturation.py  test_ultrastability.py  test_v1_v2_integration.py
(+28 files in other folders)
