[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-governor"
version = "2.1.0"
description = "Epistemic governance for LLM outputs - where text becomes state"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "James Beck"},
]
keywords = ["llm", "ai", "epistemic", "governance", "hallucination", "truth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
egov = "epistemic_governor.egov:main"
dt = "epistemic_governor.cli:main"

[project.urls]
Homepage = "https://github.com/username/epistemic-governor"
Documentation = "https://github.com/username/epistemic-governor#readme"
Repository = "https://github.com/username/epistemic-governor"

[tool.setuptools.packages.find]
where = ["src"]
include = ["epistemic_governor*"]
