[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-governor"
version = "2.2.0"
description = "Bounded Lattice Inference - governed reasoning substrate with non-linguistic authority"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "James Beck"},
]
keywords = ["llm", "ai", "epistemic", "governance", "alignment", "cybernetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
egov = "epistemic_governor.egov:main"

[project.urls]
Homepage = "https://github.com/unpingable/epistemic_governor"
Repository = "https://github.com/unpingable/epistemic_governor"

[tool.setuptools.packages.find]
where = ["src"]
include = ["epistemic_governor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
